--- a/app/views/mm_teams/_form.html.erb
+++ b/app/views/mm_teams/_form.html.erb
@@ -11,7 +11,7 @@
 	</div>
 	<div class="form-group">
 		<%= f.label :user %><br />
-		<%= select(:mm_team, :user_id, options_from_collection_for_select(User.all, :id, :email)) %><br/>
+		<%= select(:mm_team, :user_id, options_from_collection_for_select(User.all, :id, :email, @mm_team.user.id)) %><br/>
 	</div>
 
   <div class="actions padding-md text-center">
