--- a/app/views/mm_teams/index.html.erb
+++ b/app/views/mm_teams/index.html.erb
@@ -4,20 +4,20 @@
     <%= link_to 'New Team', new_mm_team_path %>
   </div>
   <div class="clear"></div>
-  <table class="teams_table">
+  <table class="mm_teams_table">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>User</th>
-        <th>Action</th>
+        <th class="name">Name</th>
+        <th class="user">User</th>
+        <th class="action">Action</th>
       </tr>
     </thead>
     <tbody>
       <% @mm_teams.each_with_index do |mm_team, index| %>
         <tr class="<%= index.odd? ? 'odd' : 'even' %>">
-          <td><%= mm_team.name %></td>
-          <td><%= mm_team.user.email %></td>
-          <td>
+          <td class="name"><%= mm_team.name %></td>
+          <td class="user"><%= mm_team.user.email %></td>
+          <td class="action">
             <%= link_to 'Edit', edit_mm_team_path(mm_team) %>
             <%= link_to 'Destroy', mm_team, :confirm => 'Are you sure?', :method => :delete %>
           </td>
