--- a/app/views/bracket/index.html.erb
+++ b/app/views/bracket/index.html.erb
@@ -1,4 +1,4 @@
 <div id="bracket_container">
-    <img alt="Rails" src="/assets/bracket.png" height="100%" width="100%"/>
+    <div id="bracket"></div>
 </div>
 
