--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -11,6 +11,15 @@ padding: 5px; }
     text-shadow: 0 1px #FFF;
 }
 
+#draft_results_container {
+    background: #f9f9f9;
+    float: left;
+    margin: 0px;
+    padding: 1% 3%;
+    width: 100%;
+    min-height: 100%;
+}
+
 .draftpicks_table_headers {
     width: 100%;
     border-top: 2px solid #a3a3a3;
@@ -69,6 +78,78 @@ width: 15%;
         }
     }
 }
+
+.draft_results_table_headers {
+    width: 100%;
+    border-top: 2px solid #a3a3a3;
+    border-bottom: 2px solid #a3a3a3;
+    /*background-color: #2E4764;*/
+    th {
+        padding: 10px 0;
+        text-transform: uppercase;
+        font-size: 10px;
+        background: #FFF;
+        text-align: center;
+        &.pick {
+            width: 10%;
+        }
+        &.mm_team {
+            width: 25%;
+        }
+        &.player {
+            width: 25%;
+        }
+        &.school {
+            width: 25%;
+        }
+        &.position {
+            width: 10%;
+        }
+        &.seed {
+            width: 10%;
+        }
+    }
+}
+
+/*  .draftpicks_table_headers th.position {
+width: 15%;
+}*/
+
+.draft_results_table {
+    width: 100%;
+    height: 720px;
+    background-color: #fff;
+    border: 0px solid;
+    overflow: auto;
+    display: block;
+    tbody {
+        width: 100%;
+        display: table;
+    }
+    td {
+        padding: 10px 2px;
+        text-align: center;
+        &.pick {
+            width: 10%;
+        }
+        &.mm_team {
+            width: 25%;
+        }
+        &.player {
+            width: 25%;
+        }
+        &.school {
+            width: 25%;
+        }
+        &.position {
+            width: 10%;
+        }
+        &.seed {
+            width: 10%;
+        }
+    }
+}
+
 
 tr {
     padding: 10px 5px;
@@ -442,4 +523,10 @@ div.regions_container {
     & > div{
         float: left;
     }
+}
+
+.draft_result_round_header {
+    background-color: #ccc;
+    color: #000;
+    text-align: left;
 }
