More updates to draft results

--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -94,18 +94,24 @@ width: 15%;
             width: 10%;
         }
         &.mm_team {
-            width: 25%;
+            width: 20%;
         }
         &.player {
-            width: 25%;
+            width: 20%;
         }
         &.school {
-            width: 25%;
+            width: 20%;
         }
         &.position {
             width: 10%;
         }
+        &.ppg {
+            width: 8%;
+        }
         &.seed {
+            width: 7%;
+        }
+        &.region {
             width: 10%;
         }
     }
@@ -133,18 +139,24 @@ width: 15%;
             width: 10%;
         }
         &.mm_team {
-            width: 25%;
+            width: 20%;
         }
         &.player {
-            width: 25%;
+            width: 20%;
         }
         &.school {
-            width: 25%;
+            width: 20%;
         }
         &.position {
             width: 10%;
         }
+        &.ppg {
+            width: 8%;
+        }
         &.seed {
+            width: 7%;
+        }
+        &.region {
             width: 10%;
         }
     }
