--- a/app/views/draft/results.html.erb
+++ b/app/views/draft/results.html.erb
@@ -7,9 +7,11 @@
             <th class="pick">Pick</th>
             <th class="mm_team">MM Team (Positions Drafted)</th>
             <th class="player">Player</th>
-            <th class="school">School</th>
             <th class="position">Position</th>
+            <th class="ppg">PPG.</th>
+            <th class="school">School</th>
             <th class="seed">Seed</th>
+            <th class="region">Region</th>
           </tr>
         </table>
         <table class="draft_results_table">
@@ -19,6 +21,8 @@
             <% if pick.round != previous_pick_round %>
               <tr class="draft_result_round_header">
                 <td>Round <%= pick.round %></td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -34,14 +38,20 @@
               <td class="player">
                 <%= pick.ncaa_player.full_name %>
               </td>
-              <td class="position">
+              <td class="position <%=get_position_css_class pick.ncaa_player.position %>">
                 <%= pick.ncaa_player.position %>
+              </td>
+              <td class="ppg">
+                <%= pick.ncaa_player.ppg_avg %>
               </td>
               <td class="school">
                 <%= pick.ncaa_player.ncaa_team.school %>
               </td>
               <td class="seed">
                 <%= pick.ncaa_player.ncaa_team.bracket_entry.seed %>
+              </td>
+              <td class="region <%= get_region_css_class pick.ncaa_player.ncaa_team.bracket_entry.region.id %>">
+                <%= pick.ncaa_player.ncaa_team.bracket_entry.region.location %>
               </td>
             </tr>
             <% previous_pick_round = pick.round %>
