Small column header change for draft reults

--- a/app/views/draft/results.html.erb
+++ b/app/views/draft/results.html.erb
@@ -5,7 +5,7 @@
         <table class="draft_results_table_headers">
           <tr>
             <th class="pick">Pick</th>
-            <th class="mm_team">MM Team (Positions Drafted)</th>
+            <th class="mm_team">MM Team</th>
             <th class="player">Player</th>
             <th class="position">Position</th>
             <th class="ppg">PPG.</th>
