--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,7 +9,7 @@
         <% end %>
       </li>
       <li>
-        <%= link_to_unless_current('Draft', draft_index_path) do |link| %>
+        <%= link_to_unless_current('Draft', draft_results_path) do |link| %>
           <span class="current_main_nav"><%= link %></span>
           <span class="current_main_nav_tip"></span>
         <% end %>
