--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -21,6 +21,12 @@
         <% end %>
       </li>
       <li>
+        <%= link_to_unless_current('Player Scoring', player_scoring_index_path) do |link| %>
+          <span class="current_main_nav"><%= link %></span>
+          <span class="current_main_nav_tip"></span>
+        <% end %>
+      </li>
+      <li>
         <%= link_to_unless_current('Bracket', bracket_index_path) do |link| %>
           <span class="current_main_nav"><%= link %></span>
           <span class="current_main_nav_tip"></span>
