minor css change for draft results view

--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -539,6 +539,8 @@ div.regions_container {
 
 .draft_result_round_header {
     background-color: #ccc;
-    color: #000;
+    color: #fff;
     text-align: left;
+    font-size: 12px;
+    font-weight: bold;
 }
