Minor css change for player scoring view

--- a/app/views/player_scoring/index.html.erb
+++ b/app/views/player_scoring/index.html.erb
@@ -2,7 +2,7 @@
     <div class="module">
       <div class="module_header">Player Scoring</div>
       <div class="module_container">
-        <div class="float-left col-md-6">
+        <div class="col-md-6">
               <div id="top_perf_container_header">Seeds 1 - 4</div>
 
               <%= render "shared/top_performers", :top_scorers => @scoring_for_seeds_1_thru_4 %>
@@ -12,7 +12,7 @@
               <%= render "shared/top_performers", :top_scorers => @scoring_for_seeds_5_thru_8 %>
         </div>
 
-        <div class="float-right col-md-6">
+        <div class="col-md-6">
             <div id="top_perf_container_header">Seeds 9 - 12</div>
 
             <%= render "shared/top_performers", :top_scorers => @scoring_for_seeds_9_thru_12 %>
