--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -325,7 +325,7 @@ textarea {
     width: 100%;
 }
 .module_container {
-    padding: 5px 5px 15px;
+    padding: 5px 5px;
 }
 
 .user_profile_container {
