Added school to top perfomrers view

--- a/app/views/shared/_top_performers.html.erb
+++ b/app/views/shared/_top_performers.html.erb
@@ -2,7 +2,7 @@
   <tr>
     <th class="position">Position</th>
     <th class="player">Player</th>
-    <th class="player">School</th>
+    <th class="school">School</th>
     <th class="team_name">MM Team</th>
     <th class="points">Points</th>
     <th class="games">Games</th>
