--- a/app/views/home/_top_scorers.html.erb
+++ b/app/views/home/_top_scorers.html.erb
@@ -5,6 +5,7 @@
   <tr>
     <th class="position">Position</th>
     <th class="player">Player</th>
+    <th class="school">School</th>
     <th class="team_name">MM Team</th>
     <th class="points">Points</th>
     <th class="games">Games</th>
@@ -17,6 +18,7 @@
       <tr class="<%= (index + 1) %2 == 0 ? 'even' : 'odd' %>">
         <td class="position"><%= index += 1 %></td>
         <td class="player"><%= link_to player.first_name + ' ' + player.last_name, "#", :onclick => "getScoringDetails('#{player.id}');" %></td>
+        <td class="school"><%= player.school %></td>
         <td class="team_name"><%= player.team_name %></td>
         <td class="points"><%= player.total_points.nil? ? '0' : sprintf("%.0f", player.total_points) %></td>
         <td class="games"><%= player.total_games.nil? ? '0' : sprintf("%.0f", player.total_games) %></td>
