--- a/app/views/home/_top_scorers.html.erb
+++ b/app/views/home/_top_scorers.html.erb
@@ -3,8 +3,9 @@
 
 <table class="top_perf_table_headers">
   <tr>
-    <th class="position">Position</th>
+    <th class="rank">Rank</th>
     <th class="player">Player</th>
+    <th class="position">Position</th>
     <th class="school">School</th>
     <th class="team_name">MM Team</th>
     <th class="points">Points</th>
@@ -16,8 +17,9 @@
   <tbody>
     <% @top_scorers.each_with_index do |player, index| %>
       <tr class="<%= (index + 1) %2 == 0 ? 'even' : 'odd' %>">
-        <td class="position"><%= index += 1 %></td>
+        <td class="rank"><%= index += 1 %></td>
         <td class="player"><%= link_to player.first_name + ' ' + player.last_name, "#", :onclick => "getScoringDetails('#{player.id}');" %></td>
+        <td class="position"><%= player.position %></td>
         <td class="school"><%= player.school %></td>
         <td class="team_name"><%= player.team_name %></td>
         <td class="points"><%= player.total_points.nil? ? '0' : sprintf("%.0f", player.total_points) %></td>
