--- a/app/assets/stylesheets/bracket.css.scss
+++ b/app/assets/stylesheets/bracket.css.scss
@@ -1,12 +1,13 @@
 #bracket_container {
-    height: 850px;
+    height: 860px;
+    width: 1400px;
     background: #f9f9f9;
     margin: 0;
     padding: 20px;
     img {
         border: 10px solid #DEDEDE;
     }
-    font-size: 26px;
+    font-size: 10px;
     font-weight: bold;
     text-align: left;
 }
@@ -43,30 +44,30 @@ div.bracket_list {
 }
 
 div.south {
-  float: right;
+  float: left;
   height: auto;
-  width: 300px;
+  width: 250px;
   margin: 5px;
 }
 
 div.east {
   float: right;
   height: auto;
-  width: 300px;
+  width: 250px;
   margin: 5px;
 }
 
 div.west {
   float: left;
   height: auto;
-  width: 300px;
+  width: 250px;
   margin: 5px;
 }
 
 div.midwest {
-  float: left;
+  float: right;
   height: auto;
-  width: 300px;
+  width: 250px;
   margin: 5px;
 }
 
@@ -77,3 +78,182 @@ div.midwest {
     background: asset-url("bracket.png", image) 0 0 no-repeat;
     margin: 10px auto;
 }
+
+/*#bracket_container div{
+  background-color: #eee;
+  border: 1px solid #fff;
+}*/
+
+div.round_header {
+  width: 120px;
+  text-align: center;
+  float: left;
+  font-size: 12px;
+}
+
+div.round_header_champ {
+  width: 140px;
+  text-align: center;
+  float: left;
+  font-size: 12px;
+}
+
+div.first_round {
+  float: left;
+  width: 120px;
+  height: 400px;
+}
+
+div.second_round {
+  float: left;
+  width: 120px;
+  height: 50%;
+  margin-top: 12px;
+}
+
+div.third_round {
+  float: left;
+  width: 120px;
+  height: 25%;
+  margin-top: 36px;
+}
+
+div.fourth_round {
+  float: left;
+  width: 120px;
+  height: 12%;
+  margin-top: 84px;
+}
+
+div.fifth_round {
+  float: left;
+  width: 120px;
+  height: 12%;
+  margin-top: 108px;
+  border-bottom: 1px solid;
+  padding-top: 82px;
+  padding-left: 5px;
+  text-align: center;
+}
+
+.sixth_round_top, .sixth_round_bottom {
+  float: left;
+  width: 150px;
+  height: 20%;
+  border-left: 1px solid;
+  border-right: 1px solid;
+  text-align: center;
+}
+
+.sixth_round_top {
+  border-bottom: 1px solid;
+  margin-top: 205px;
+  padding-top: 146px;
+}
+
+.sixth_round_bottom {
+  border-top: 1px solid;
+  margin-top: 42px;
+  padding-top: 2px;
+}
+
+.champion {
+  width: 150px;
+  border-bottom: 1px solid;
+  text-align: center;
+  margin-top: 40px;
+  height: 24px;
+  padding-top: 10px;
+}
+
+div.second_round_empty_spacer {
+  height: 24px;
+}
+
+div.second_round_right_border_spacer {
+  height: 24px;
+  border-right: 1px solid;
+}
+
+div.third_round_empty_spacer {
+  height: 72px;
+}
+
+div.third_round_right_border_spacer {
+  height: 72px;
+  border-right: 1px solid;
+}
+
+div.fourth_round_right_border_spacer {
+  height: 168px;
+  border-right: 1px solid;
+  padding-top: 78px;
+  font-size: 24px;
+  text-align: center;
+}
+
+div.second_round_left_border_spacer {
+  height: 24px;
+  border-left: 1px solid;
+}
+
+div.third_round_left_border_spacer {
+  height: 72px;
+  border-left: 1px solid;
+}
+
+div.fourth_round_left_border_spacer {
+  height: 168px;
+  border-left: 1px solid;
+  padding-top: 78px;
+  font-size: 24px;
+  text-align: center;
+}
+
+div.home_team_left {
+  border-bottom: 1px solid;
+  padding-left: 3px;
+  padding-top: 10px;
+  height: 24px;
+}
+
+div.away_team_left {
+  border-bottom: 1px solid;
+  border-right: 1px solid;
+  padding-left: 3px;
+  padding-top: 10px;
+  height: 24px;
+}
+
+div.home_team_right {
+  border-bottom: 1px solid;
+  padding-right: 3px;
+  padding-top: 10px;
+  height: 24px;
+  text-align: right;
+}
+
+div.away_team_right {
+  border-bottom: 1px solid;
+  border-left: 1px solid;
+  padding-right: 3px;
+  padding-top: 10px;
+  height: 24px;
+  text-align: right;
+}
+
+.play_in_left {
+  float: left;
+  margin-top: 105px;
+  width: 120px;
+  text-align: left;
+  margin-left: 40px;
+}
+.play_in_right {
+  float: left;
+  margin-top: 105px;
+  width: 120px;
+  text-align: right;
+  margin-left: -50px;
+}
+
