--- a/app/views/bracket/index.html.erb
+++ b/app/views/bracket/index.html.erb
@@ -1,4 +1,236 @@
 <div id="bracket_container">
-    <div id="bracket"></div>
+    <!-- <div id="bracket"></div> -->
+    <div>
+        <div class="round_header">Round 1</div>
+        <div class="round_header">Round 2</div>
+        <div class="round_header">Sweet 16</div>
+        <div class="round_header">Elite 8</div>
+        <div class="round_header">Final 4</div>
+        <div class="round_header_champ">Championship</div>
+        <div class="round_header">Final 4</div>
+        <div class="round_header">Elite 8</div>
+        <div class="round_header">Sweet 16</div>
+        <div class="round_header">Round 2</div>
+        <div class="round_header">Round 1</div>
+    </div>
+
+    <div class="clear"></div>
+
+    <div class="first_round">
+        <% @south_region_bracket_entries.each_with_index do |entry, index| %>
+            <div class="<%= (index + 1) %2 == 0 ? 'away_team_left' : 'home_team_left'%>">
+                <%= entry.seed %>
+                <% if entry.is_play_in %>
+                    Play in Game Winner
+                <% else %>
+                    <%= entry.ncaa_team.school %>
+                <% end %>
+            </div>
+        <% end %>
+    </div>
+    <div class="second_round">
+        <div class="home_team_left"></div>
+        <div class="second_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_left"></div>
+        <div class="second_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_left"></div>
+        <div class="second_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_left"></div>
+        <div class="second_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+    </div>
+
+    <div class="third_round">
+        <div class="home_team_left"></div>
+        <div class="third_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+        <div class="third_round_empty_spacer"></div>
+        <div class="home_team_left"></div>
+        <div class="third_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+    </div>
+
+    <div class="fourth_round">
+        <div class="home_team_left"></div>
+        <div class="fourth_round_right_border_spacer"><p class="<%= get_region_css_class(@south_region_bracket_entries[0].region_id) %>">South</p></div>
+        <div class="away_team_left"></div>
+    </div>
+
+    <div class="fifth_round"></div>
+
+    <div class="sixth_round_top">
+        <div class="champion"></div>
+    </div>
+
+    <div class="fifth_round"></div>
+
+    <div class="fourth_round">
+        <div class="home_team_right"></div>
+        <div class="fourth_round_left_border_spacer"><p class="<%= get_region_css_class(@east_region_bracket_entries[0].region_id) %>">East</p></div>
+        <div class="away_team_right"></div>
+    </div>
+
+    <div class="third_round">
+        <div class="home_team_right"></div>
+        <div class="third_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+        <div class="third_round_empty_spacer"></div>
+        <div class="home_team_right"></div>
+        <div class="third_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+    </div>
+
+    <div class="second_round">
+        <div class="home_team_right"></div>
+        <div class="second_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_right"></div>
+        <div class="second_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_right"></div>
+        <div class="second_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_right"></div>
+        <div class="second_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+    </div>
+
+    <div class="first_round">
+        <% @east_region_bracket_entries.each_with_index do |entry, index| %>
+            <div class="<%= (index + 1) %2 == 0 ? 'away_team_right' : 'home_team_right'%>">
+                <%= entry.seed %>
+                <% if entry.is_play_in %>
+                    Play in Game Winner
+                <% else %>
+                    <%= entry.ncaa_team.school %>
+                <% end %>
+            </div>
+        <% end %>
+    </div>
+
+    <div class="clear"></div>
+
+     <div class="first_round">
+        <% @west_region_bracket_entries.each_with_index do |entry, index| %>
+            <div class="<%= (index + 1) %2 == 0 ? 'away_team_left' : 'home_team_left'%>">
+                <%= entry.seed %>
+                <% if entry.is_play_in %>
+                    Play in Game Winner
+                <% else %>
+                    <%= entry.ncaa_team.school %>
+                <% end %>
+            </div>
+        <% end %>
+    </div>
+    <div class="second_round">
+        <div class="home_team_left"></div>
+        <div class="second_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_left"></div>
+        <div class="second_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_left"></div>
+        <div class="second_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_left"></div>
+        <div class="second_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+    </div>
+
+    <div class="third_round">
+        <div class="home_team_left"></div>
+        <div class="third_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+        <div class="third_round_empty_spacer"></div>
+        <div class="home_team_left"></div>
+        <div class="third_round_right_border_spacer"></div>
+        <div class="away_team_left"></div>
+    </div>
+
+    <div class="fourth_round">
+        <div class="home_team_left"></div>
+        <div class="fourth_round_right_border_spacer"><p class="<%= get_region_css_class(@west_region_bracket_entries[0].region_id) %>">West</p></div>
+        <div class="away_team_left"></div>
+    </div>
+
+    <div class="fifth_round">
+        <div class="play_in_left">
+            <div class="home_team_left"><%= @play_in_matchups[2].seed %> <%= @play_in_matchups[2].ncaa_team.school %></div>
+            <div class="away_team_left"><%= @play_in_matchups[3].seed %> <%= @play_in_matchups[3].ncaa_team.school %></div>
+            <div class="home_team_left"><%= @play_in_matchups[6].seed %> <%= @play_in_matchups[6].ncaa_team.school %></div>
+            <div class="away_team_left"><%= @play_in_matchups[7].seed %> <%= @play_in_matchups[7].ncaa_team.school %></div>
+        </div>
+    </div>
+
+    <div class="sixth_round_bottom"><div style="margin-top: 230px; font-size: 12px;">First 4 Play in Games</div></div>
+
+    <div class="fifth_round">
+        <div class="play_in_right">
+            <div class="home_team_right"><%= @play_in_matchups[4].seed %> <%= @play_in_matchups[4].ncaa_team.school %></div>
+            <div class="away_team_right"><%= @play_in_matchups[5].seed %> <%= @play_in_matchups[5].ncaa_team.school %></div>
+            <div class="home_team_right"><%= @play_in_matchups[0].seed %> <%= @play_in_matchups[0].ncaa_team.school %></div>
+            <div class="away_team_right"><%= @play_in_matchups[1].seed %> <%= @play_in_matchups[1].ncaa_team.school %></div>
+        </div>
+    </div>
+
+    <div class="fourth_round">
+        <div class="home_team_right"></div>
+        <div class="fourth_round_left_border_spacer"><p class="<%= get_region_css_class(@midwest_region_bracket_entries[0].region_id) %>">Midwest</p></div>
+        <div class="away_team_right"></div>
+    </div>
+
+    <div class="third_round">
+        <div class="home_team_right"></div>
+        <div class="third_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+        <div class="third_round_empty_spacer"></div>
+        <div class="home_team_right"></div>
+        <div class="third_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+    </div>
+
+    <div class="second_round">
+        <div class="home_team_right"></div>
+        <div class="second_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_right"></div>
+        <div class="second_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_right"></div>
+        <div class="second_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+        <div class="second_round_empty_spacer"></div>
+        <div class="home_team_right"></div>
+        <div class="second_round_left_border_spacer"></div>
+        <div class="away_team_right"></div>
+    </div>
+
+    <div class="first_round">
+        <% @midwest_region_bracket_entries.each_with_index do |entry, index| %>
+            <div class="<%= (index + 1) %2 == 0 ? 'away_team_right' : 'home_team_right'%>">
+                <%= entry.seed %>
+                <% if entry.is_play_in %>
+                    Play in Game Winner
+                <% else %>
+                    <%= entry.ncaa_team.school %>
+                <% end %>
+            </div>
+        <% end %>
+    </div>
+
 </div>
 
