--- a/app/views/ncaa_players/_form.html.erb
+++ b/app/views/ncaa_players/_form.html.erb
@@ -15,7 +15,7 @@
 	</div>
 	<div class="form-group">
 	    NCAA Team<br />
-		<%= collection_select(:ncaa_player, :ncaa_team_id, NcaaTeam.all(:order => "school"), :id, :school) %>
+		<%= collection_select(:ncaa_player, :ncaa_team_id, NcaaTeam.all.order(:school), :id, :school) %>
 	</div>
 	<div class="form-group">
 		<%= f.label :position %><br />
