--- a/app/views/mm_teams/index.html.erb
+++ b/app/views/mm_teams/index.html.erb
@@ -16,7 +16,7 @@
       <% @mm_teams.each_with_index do |mm_team, index| %>
         <tr class="<%= index.odd? ? 'odd' : 'even' %>">
           <td class="name"><%= mm_team.name %></td>
-          <td class="user"><%= mm_team.user.email %></td>
+          <td class="user"><%= !mm_team.user.nil? ? mm_team.user.email : 'TBD' %></td>
           <td class="action">
             <%= link_to 'Edit', edit_mm_team_path(mm_team) %>
             <%= link_to 'Destroy', mm_team, :confirm => 'Are you sure?', :method => :delete %>
