--- a/app/views/admin/ncaa_players/show.html.erb
+++ b/app/views/admin/ncaa_players/show.html.erb
@@ -14,7 +14,7 @@
 		<%= @ncaa_player.ppg_avg %><br/>
 	</p>
 
-	<%= link_to 'Edit', edit_ncaa_player_path(@ncaa_player) %> |
-	<%= link_to 'Back', ncaa_players_path %>
+	<%= link_to 'Edit', edit_admin_ncaa_player_path(@ncaa_player) %> |
+	<%= link_to 'Back', admin_ncaa_players_path %>
 </div>
 <div class="clear"></div>
