--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           <div id="admin_nav">
             <%= link_to_unless_current 'MM Teams', mm_teams_path %>
             <%= link_to_unless_current 'NCAA Teams', ncaa_teams_path %>
-            <%= link_to_unless_current 'NCAA Players', ncaa_players_path %>
+            <%= link_to_unless_current 'NCAA Players', admin_ncaa_players_path %>
             <%= link_to_unless_current 'Bracket', admin_bracket_path %>
           </div>
         <% end %>
