--- a/app/views/admin/ncaa_players/edit.html.erb
+++ b/app/views/admin/ncaa_players/edit.html.erb
@@ -3,7 +3,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @ncaa_player %> |
-<%= link_to 'Back', ncaa_players_path %>
+<%= link_to 'Back', admin_ncaa_players_path %>
 </div>
 <div class="clear"></div>
