--- a/app/views/admin/ncaa_players/new.html.erb
+++ b/app/views/admin/ncaa_players/new.html.erb
@@ -3,6 +3,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', ncaa_players_path %>
+<%= link_to 'Back', admin_ncaa_players_path %>
 </div>
 <div class="clear"></div>
