--- a/app/views/admin/ncaa_teams/show.html.erb
+++ b/app/views/admin/ncaa_teams/show.html.erb
@@ -5,5 +5,5 @@
 <b>Last Name:</b>
 <%= @ncaa_team.nickname %><br/>
 
-<%= link_to 'Edit', edit_ncaa_team_path(@ncaa_team) %> |
-<%= link_to 'Back', ncaa_teams_path %>
+<%= link_to 'Edit', edit_admin_ncaa_team_path(@ncaa_team) %> |
+<%= link_to 'Back', admin_ncaa_teams_path %>
