--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <% if controller.controller_name == 'admin' || controller.controller_name == 'ncaa_players'  || controller.controller_name == 'ncaa_teams' || controller.controller_name == 'mm_teams' %>
           <div id="admin_nav">
             <%= link_to_unless_current 'MM Teams', mm_teams_path %>
-            <%= link_to_unless_current 'NCAA Teams', ncaa_teams_path %>
+            <%= link_to_unless_current 'NCAA Teams', admin_ncaa_teams_path %>
             <%= link_to_unless_current 'NCAA Players', admin_ncaa_players_path %>
             <%= link_to_unless_current 'Bracket', admin_bracket_path %>
           </div>
