--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -9,6 +9,7 @@
     margin-top: 0px;
     margin-bottom: 0px;
     padding-top: 5px; 
+    padding-LEFT: 5px;
     font-size: 14px;
     color: #fff;
     float: left;
