Updates to the admin\ncaa teams
- Added web id to add, edit, and list views, so it can be entered and
modified as part of an ncaa team
- Updated css to correct alignment issues

--- a/app/views/admin/ncaa_teams/_form.html.erb
+++ b/app/views/admin/ncaa_teams/_form.html.erb
@@ -12,6 +12,9 @@
 	<div class="form-group">
 	    Nickname<br />
 	    <%= f.text_field :nickname, class: 'form-control' %>
+	</div><div class="form-group">
+	    Web Id<br />
+	    <%= f.text_field :web_id, class: 'form-control' %>
 	</div>
   	<div class="actions padding-md text-center">
     	<%= f.submit "Submit", class: 'btn btn-success' %>
