--- a/app/assets/stylesheets/ncaa_teams.css.scss
+++ b/app/assets/stylesheets/ncaa_teams.css.scss
@@ -14,10 +14,23 @@
         border-bottom: 1px solid #E5E5E5;
         background-color: #FFF;
         th {
-            padding: 10px 0;
+            padding: 10px 5px;
             text-transform: uppercase;
             font-size: 10px;
             font-weight: normal;
+            text-align: center;
+            &.school {
+                width: 25%;
+            }
+            &.nickname {
+                width: 25%;
+            }
+            &.web_id {
+                width: 25%;
+            }
+            &.action {
+                width: 25%;
+            }
         }
     }
     tbody {
@@ -26,6 +39,18 @@
     }
     td {
         padding: 10px 5px;
-        text-align: left;
+        text-align: center;
+        &.school {
+            width: 25%;
+        }
+        &.nickname {
+            width: 25%;
+        }
+        &.web_id {
+            width: 25%;
+        }
+        &.action {
+            width: 25%;
+        }
     }
 }
