--- a/app/assets/stylesheets/admin/ncaa_players.css.scss
+++ b/app/assets/stylesheets/admin/ncaa_players.css.scss
@@ -10,31 +10,34 @@
     thead, tbody {
         display: table;
         width: 100%;
-    }
-    th {
-        padding: 10px 0;
-        text-transform: uppercase;
-        font-size: 10px;
-        font-weight: normal;
-        text-align: center;
+        border-top: 1px solid #E5E5E5;
+        border-bottom: 1px solid #E5E5E5;
+        background-color: #FFF;
+        th {
+            padding: 10px 0;
+            text-transform: uppercase;
+            font-size: 10px;
+            font-weight: normal;
+            text-align: center;
 
-        &.name {
-            width: 20%;
-        }
-        &.school {
-            width: 25%;
-        }
-        &.position {
-            width: 10%;
-        }
-        &.ppg {
-            width: 10%;
-        }
-        &.jersey {
-            width: 10%;
+            &.name {
+                width: 20%;
+            }
+            &.school {
+                width: 25%;
+            }
+            &.position {
+                width: 10%;
+            }
+            &.ppg {
+                width: 10%;
+            }
+            &.jersey {
+                width: 10%;
+            }
         }
     }
-
+    
     td {
         padding: 10px 2px;
         text-align: center;
