--- a/app/views/admin/mm_teams/_form.html.erb
+++ b/app/views/admin/mm_teams/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@mm_team) do |f| %>
+<%= form_for([:admin, @mm_team]) do |f| %>
   <% if @mm_team.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@mm_team.errors.count, "error") %> prohibited this mm_team from being saved:</h2>
@@ -11,7 +11,7 @@
 	</div>
 	<div class="form-group">
 		<%= f.label :user %><br />
-		<%= select(:mm_team, :user_id, options_from_collection_for_select(User.all, :id, :email, @mm_team.user.id)) %><br/>
+		<%= select(:mm_team, :user_id, options_from_collection_for_select(User.all, :id, :email, @mm_team.user.nil? ? '' : @mm_team.user.id), { :prompt => 'Select User' }) %><br/>
 	</div>
 
   <div class="actions padding-md text-center">
