--- a/app/views/shared/_ncaa_players.html.erb
+++ b/app/views/shared/_ncaa_players.html.erb
@@ -39,7 +39,7 @@
               <% if controller_path.split('/').first != 'admin' %>
                 <%= link_to 'Draft', ncaa_player, :method => :draft_player %>
               <% end %>
-              <%= link_to 'Remove', [:admin, ncaa_player], :confirm => 'Are you sure?', :method => :delete %>
+              <%= link_to 'Remove', [:admin, ncaa_player], :method => :delete, data: { confirm: 'Are you sure?' } %>
             <% else %>
               <%= link_to 'Draft', draft_draft_player_path(ncaa_player) %>
             <% end %>
