--- a/app/views/admin/_bracket_entry.html.erb
+++ b/app/views/admin/_bracket_entry.html.erb
@@ -7,7 +7,7 @@
 	</div>
 <% else %>
 	<% if @previous_seed != entry.seed %>
-		<div style='padding: 2px'>
+		<div style='margin-top: 5px; margin-bottom: 5px; margin-left: 2px;'>
 			<div style='width: 20px' class="float-left"><%= entry.seed %></div>
 			<span>PLAY-IN GAME WINNER</span>
 		</div> 
