--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -27,3 +27,46 @@
 	    padding: 5px 5px 5px 5px;
 	}    
 }
+
+.draft_order_table {
+    width: 100%;
+    height: 750px;
+    background-color: #fff;
+    border: 0px;
+    overflow: auto;
+    display: block;
+    thead{
+        display: table;
+        width: 100%;
+        border-top: 1px solid #E5E5E5;
+        border-bottom: 1px solid #E5E5E5;
+        background-color: #FFF;
+        th {
+            padding: 10px 0;
+            text-transform: uppercase;
+            font-size: 10px;
+            font-weight: normal;
+            text-align: center;
+            &.pick {
+                width: 50%;
+            }
+            &.mm_team {
+                width: 50%;
+            }
+        }
+    }
+    tbody {
+        width: 100%;
+        display: table;
+    }
+    td {
+        padding: 10px 2px;
+        text-align: center;
+        &.pick {
+            width: 50%;
+        }
+        &.mm_team {
+            width: 50%;
+        }
+    }
+}
