--- a/app/assets/stylesheets/admin/ncaa_teams.css.scss
+++ b/app/assets/stylesheets/admin/ncaa_teams.css.scss
@@ -1,3 +1,56 @@
-// Place all the styles related to the admin/ncaa_teams controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#ncaa_teams_container {
+    margin: 0px;
+    height: 800px;
+    overflow: auto;
+}
+
+.teams_table {
+    display: block;
+    width: 100%;
+    thead{
+        display: table;
+        width: 100%;
+        border-top: 1px solid #E5E5E5;
+        border-bottom: 1px solid #E5E5E5;
+        background-color: #FFF;
+        th {
+            padding: 10px 5px;
+            text-transform: uppercase;
+            font-size: 10px;
+            font-weight: normal;
+            text-align: center;
+            &.school {
+                width: 25%;
+            }
+            &.nickname {
+                width: 25%;
+            }
+            &.web_id {
+                width: 25%;
+            }
+            &.action {
+                width: 25%;
+            }
+        }
+    }
+    tbody {
+        display: table;
+        width: 100%;
+    }
+    td {
+        padding: 10px 5px;
+        text-align: center;
+        &.school {
+            width: 25%;
+        }
+        &.nickname {
+            width: 25%;
+        }
+        &.web_id {
+            width: 25%;
+        }
+        &.action {
+            width: 25%;
+        }
+    }
+}
