--- a/app/views/admin/_draft_order.html.erb
+++ b/app/views/admin/_draft_order.html.erb
@@ -1,3 +1,26 @@
+<h1>Draft Order</h1>
+<div class="float-left" style="width: 73%;">
+	<table class="draft_order_table">
+	  	<thead>
+		    <tr>
+		      <th class="pick">Pick #</th>
+		      <th class="mm_team">Team Name</th>
+		    </tr>
+		</thead>
+		<tbody>
+		  <% @draft_picks.each do |pick| %>
+		    <tr>
+		      <td class="pick"><%= pick.overall_pick %></td>
+		      <td class="mm_team">
+		        <%= pick.mm_team.name %>
+		      </td>
+		    </tr>
+		  <% end %>
+	  </tbody>
+	</table>
+</div>
+<div class="float-right">
 <%= form_tag(admin_generate_draft_picks_path, method: "post") do %>
   <%= submit_tag("Generate Draft Picks", class: 'btn btn-success', confirm: 'This will Delete all current draft picks. Are you sure?') %>
 <% end %>
+</div>
