--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -35,10 +35,13 @@ padding: 5px; }
             width: 10%;
         }
         &.mm_team {
-            width: 50%;
+            width: 40%;
         }
         &.player {
-            width: 30%;
+            width: 20%;
+        }
+        &.school {
+            width: 20%;
         }
         &.position {
             width: 10%;
@@ -68,10 +71,13 @@ width: 15%;
             width: 10%;
         }
         &.mm_team {
-            width: 50%;
+            width: 40%;
         }
         &.player {
-            width: 30%;
+            width: 20%;
+        }
+        &.school {
+            width: 20%;
         }
         &.position {
             width: 10%;
